<resources>
    <string name="app_name">registration</string>
    <string name="termsAgreement">By clicking the “Login” button, you accept the <u> terms and conditions of the loyalty program</u></string>
    <string name="signIn">Sign-In</string>
    <string name="NameEditText">Name</string>
    <string name="FirstName">Surname</string>
    <string name="PhoneNumber">Phone number</string>
    <string name="Password">Password</string>
    <string name="entry">Entry</string>
    <string name="error_invalid_char" translatable="false">The %s symbol cannot be used</string>
    <string name="error_lengths" translatable="false">First or last name must consist of more than one character</string>
    <string name="error_password_character" translatable="false">Use only Latin characters in your password</string>
    <string name="error_password_security" translatable="false">Create a more secure password</string>
    <string name="error_number_phone" translatable="false">A user with the same number already exists</string>
</resources>