<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".activity.RegistrationActivity">


    <EditText
        android:id="@+id/password"
        android:layout_width="385dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:autofillHints="name"
        android:background="@drawable/rounded_edittext_bg"
        android:hint="@string/Password"
        android:maxLength="20"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPhoneNumber" />

    <TextView
        android:id="@+id/entryText"
        android:layout_width="73dp"
        android:layout_height="21dp"
        android:text="@string/entry"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036" />


    <EditText
        android:id="@+id/editName"
        android:layout_width="385dp"
        android:layout_height="56dp"
        android:layout_marginBottom="20dp"
        android:autofillHints="name"
        android:background="@drawable/rounded_edittext_bg"
        android:hint="@string/NameEditText"
        android:inputType="text"
        android:maxLength="20"
        android:paddingStart="16dp"


        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/editSurname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editSurname"
        android:layout_width="385dp"
        android:layout_height="56dp"
        android:autofillHints="name"
        android:background="@drawable/rounded_edittext_bg"
        android:hint="@string/FirstName"
        android:inputType="text"
        android:maxLength="20"
        android:paddingStart="16dp"

        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.369" />

    <EditText
        android:id="@+id/editPhoneNumber"
        android:layout_width="385dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:autofillHints="name"
        android:background="@drawable/rounded_edittext_bg"
        android:hint="@string/PhoneNumber"
        android:inputType="phone"
        android:maxLength="17"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editSurname" />

    <Button
        android:id="@+id/button"
        android:layout_width="385dp"
        android:layout_height="56dp"
        android:backgroundTint="@color/pale_pink"
        android:focusable="true"
        android:gravity="center"

        android:text="@string/signIn"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/termsAgreement"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.644" />

    <TextView
        android:id="@+id/termsAgreement"
        android:layout_width="233dp"
        android:layout_height="27dp"
        android:layout_marginBottom="10dp"
        android:alpha="0.6"
        android:text="@string/termsAgreement"
        android:textAlignment="center"
        android:textColor="#504E4E"
        android:textSize="11sp"
        app:flow_horizontalAlign="center"
        app:flow_verticalAlign="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/cancelNameEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edittext_bg"
        android:contentDescription="@drawable/baseline_clear_24"
        android:textAlignment="center"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="@+id/editName"
        app:layout_constraintEnd_toEndOf="@+id/editName"
        app:layout_constraintHorizontal_bias="0.96"
        app:layout_constraintStart_toStartOf="@+id/editName"
        app:layout_constraintTop_toTopOf="@+id/editName"
        app:srcCompat="@drawable/baseline_clear_24" />


    <ImageButton
        android:id="@+id/cancelSurnameEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:background="@drawable/rounded_edittext_bg"
        android:contentDescription="@drawable/baseline_clear_24"
        android:textAlignment="center"

        app:layout_constraintBottom_toBottomOf="@+id/editSurname"
        app:layout_constraintEnd_toEndOf="@+id/editSurname"
        app:layout_constraintHorizontal_bias="0.96"
        app:layout_constraintStart_toStartOf="@+id/editSurname"
        app:layout_constraintTop_toTopOf="@+id/editSurname"
        app:srcCompat="@drawable/baseline_clear_24" />

    <ImageButton
        android:id="@+id/cancelPhoneNumberEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edittext_bg"
        android:contentDescription="@drawable/baseline_clear_24"
        android:textAlignment="center"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="@+id/editPhoneNumber"
        app:layout_constraintEnd_toEndOf="@+id/editPhoneNumber"
        app:layout_constraintHorizontal_bias="0.96"
        app:layout_constraintStart_toStartOf="@+id/editPhoneNumber"
        app:layout_constraintTop_toTopOf="@+id/editPhoneNumber"
        app:srcCompat="@drawable/baseline_clear_24" />

    <ImageButton
        android:id="@+id/cancelPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:background="@drawable/rounded_edittext_bg"
        android:contentDescription="@drawable/baseline_clear_24"
        android:textAlignment="center"

        app:layout_constraintBottom_toBottomOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.924"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="@+id/password"
        app:srcCompat="@drawable/baseline_clear_24" />

    <TextView
        android:id="@+id/errorMessageName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:layout_marginStart="8dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/editName"
        app:layout_constraintStart_toStartOf="@+id/editName"
        app:layout_constraintTop_toBottomOf="@+id/editName" />

    <TextView
        android:id="@+id/errorMessageNumberPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:layout_marginStart="8dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/editPhoneNumber"
        app:layout_constraintStart_toStartOf="@+id/editPhoneNumber"
        app:layout_constraintTop_toBottomOf="@+id/editPhoneNumber" />

    <TextView
        android:id="@+id/errorMessageSurname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:layout_marginStart="8dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/editSurname"
        app:layout_constraintStart_toStartOf="@+id/editSurname"
        app:layout_constraintTop_toBottomOf="@+id/editSurname" />

    <TextView
        android:id="@+id/errorPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:layout_marginStart="8dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />



</androidx.constraintlayout.widget.ConstraintLayout>